[gd_scene load_steps=19 format=3 uid="uid://d2pkl540o6fx"]

[ext_resource type="Script" path="res://Scripts/UIControl.gd" id="1_i768k"]
[ext_resource type="Texture2D" uid="uid://gf747ddn62q1" path="res://Assets/simplesearch.svg" id="3_djbwo"]
[ext_resource type="Texture2D" uid="uid://ciilsbv5mr1xv" path="res://Assets/plainupnp.svg" id="4_d5doy"]
[ext_resource type="Texture2D" uid="uid://bk8c6qr86ncih" path="res://Assets/settings.svg" id="4_gdpu0"]
[ext_resource type="Texture2D" uid="uid://bmdrjmknxhowt" path="res://Assets/simplesearch (1).svg" id="4_j21sd"]
[ext_resource type="ButtonGroup" uid="uid://bqw5rssha8tr5" path="res://TRESfiles/bottombar.tres" id="4_lch7b"]
[ext_resource type="Texture2D" uid="uid://bvqqp2bttsp4c" path="res://Assets/navegadoreinkbro.svg" id="5_i6dyj"]
[ext_resource type="Script" path="res://Scripts/NetworkListManager.gd" id="6_lko43"]
[ext_resource type="Texture2D" uid="uid://c50b71lb0hfwq" path="res://Assets/settings (1).svg" id="6_voh2d"]
[ext_resource type="PackedScene" uid="uid://dqey7fpvbupyl" path="res://Scenes/community_list.tscn" id="7_527du"]
[ext_resource type="PackedScene" uid="uid://pj0t14sthbuj" path="res://Scenes/settings.tscn" id="8_684ki"]
[ext_resource type="Script" path="res://Scripts/DebugMenu.gd" id="8_pdblh"]
[ext_resource type="Texture2D" uid="uid://bc3j8unsnufg7" path="res://Assets/homeicon.png" id="10_h3ycd"]
[ext_resource type="Texture2D" uid="uid://ou5qr45qixu6" path="res://Assets/homeiconpressed.png" id="11_uhfyi"]
[ext_resource type="Texture2D" uid="uid://drfuetwmikxvv" path="res://Assets/messages.png" id="12_eclaf"]
[ext_resource type="Texture2D" uid="uid://daejdtk4funw8" path="res://Assets/messagespressed.png" id="13_tlxq0"]
[ext_resource type="Texture2D" uid="uid://dgu6u2h36a53t" path="res://Assets/Notifications.png" id="14_uyyww"]
[ext_resource type="Texture2D" uid="uid://cnjpvnn15a4gy" path="res://Assets/Notificationspressed.png" id="15_x1mtu"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i768k")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Topbar" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="Search" type="TextureButton" parent="VBoxContainer/Topbar"]
layout_mode = 2
size_flags_horizontal = 2
toggle_mode = true
button_group = ExtResource("4_lch7b")
texture_normal = ExtResource("3_djbwo")
texture_pressed = ExtResource("4_j21sd")
stretch_mode = 5

[node name="NetworkOption" type="OptionButton" parent="VBoxContainer/Topbar"]
layout_mode = 2
script = ExtResource("6_lko43")

[node name="Settings" type="TextureButton" parent="VBoxContainer/Topbar"]
layout_mode = 2
size_flags_horizontal = 10
toggle_mode = true
button_group = ExtResource("4_lch7b")
texture_normal = ExtResource("4_gdpu0")
texture_pressed = ExtResource("6_voh2d")
stretch_mode = 5

[node name="Debug" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 1
script = ExtResource("8_pdblh")

[node name="Button" type="Button" parent="VBoxContainer/Debug"]
layout_mode = 2
text = "connect to host"

[node name="Button2" type="Button" parent="VBoxContainer/Debug"]
layout_mode = 2
text = "Communities"

[node name="Button3" type="Button" parent="VBoxContainer/Debug"]
layout_mode = 2
text = "Printer"

[node name="Button4" type="Button" parent="VBoxContainer/Debug"]
layout_mode = 2
text = "Button4"

[node name="Button5" type="Button" parent="VBoxContainer/Debug"]
layout_mode = 2
text = "Button5"

[node name="MainUI" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="CommunityList" parent="VBoxContainer/MainUI" instance=ExtResource("7_527du")]
visible = false
layout_mode = 2

[node name="HFlowContainer" type="HFlowContainer" parent="VBoxContainer/MainUI"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Settings" parent="VBoxContainer/MainUI" instance=ExtResource("8_684ki")]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonBar" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 1

[node name="Activity Feed" type="TextureButton" parent="VBoxContainer/ButtonBar"]
layout_mode = 2
toggle_mode = true
action_mode = 0
button_group = ExtResource("4_lch7b")
texture_normal = ExtResource("4_d5doy")
stretch_mode = 5

[node name="Communities" type="TextureButton" parent="VBoxContainer/ButtonBar"]
layout_mode = 2
toggle_mode = true
action_mode = 0
button_group = ExtResource("4_lch7b")
texture_normal = ExtResource("5_i6dyj")
stretch_mode = 5

[node name="Home" type="TextureButton" parent="VBoxContainer/ButtonBar"]
layout_mode = 2
toggle_mode = true
action_mode = 0
button_group = ExtResource("4_lch7b")
texture_normal = ExtResource("10_h3ycd")
texture_pressed = ExtResource("11_uhfyi")
stretch_mode = 5

[node name="Messages" type="TextureButton" parent="VBoxContainer/ButtonBar"]
layout_mode = 2
toggle_mode = true
action_mode = 0
button_group = ExtResource("4_lch7b")
texture_normal = ExtResource("12_eclaf")
texture_pressed = ExtResource("13_tlxq0")
stretch_mode = 5

[node name="Notifications" type="TextureButton" parent="VBoxContainer/ButtonBar"]
layout_mode = 2
toggle_mode = true
action_mode = 0
button_group = ExtResource("4_lch7b")
texture_normal = ExtResource("14_uyyww")
texture_pressed = ExtResource("15_x1mtu")
stretch_mode = 5

[connection signal="toggled" from="VBoxContainer/Topbar/Search" to="." method="_on_search_toggled"]
[connection signal="toggled" from="VBoxContainer/Topbar/Settings" to="." method="_on_settings_toggled"]
[connection signal="pressed" from="VBoxContainer/Debug/Button" to="VBoxContainer/Debug" method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Debug/Button2" to="VBoxContainer/Debug" method="_on_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Debug/Button3" to="VBoxContainer/Debug" method="_on_button_3_pressed"]
[connection signal="pressed" from="VBoxContainer/Debug/Button4" to="VBoxContainer/Debug" method="_on_button_4_pressed"]
[connection signal="pressed" from="VBoxContainer/Debug/Button5" to="VBoxContainer/Debug" method="_on_button_5_pressed"]
[connection signal="toggled" from="VBoxContainer/ButtonBar/Communities" to="." method="_on_communities_toggled"]
[connection signal="toggled" from="VBoxContainer/ButtonBar/Home" to="." method="_on_home_toggled"]
[connection signal="toggled" from="VBoxContainer/ButtonBar/Messages" to="." method="_on_messages_toggled"]
[connection signal="toggled" from="VBoxContainer/ButtonBar/Notifications" to="." method="_on_notifications_toggled"]
